[package]
name = "hflow"
version = "0.1.0"
edition = "2024"
authors = ["cvalend <cvalendb@outlook.com>"]
description = "A lightweight concurrent task progress manager for CLI applications."
readme = "README.md"
repository = "https://github.com/CVALENDB/hflow"
license = "MIT"
keywords = ["cli", "progress", "task-manager", "spinner", "concurrent"]
categories = ["command-line-interface", "concurrency"]

[dependencies]
colored = "3.1.1"